# CANopenMonitor_ESP32

./: .gitmodules  README.md
CANopenMonitor/: .gitignore  CANopenMonitor.sll  CANopenMonitor.spj  CMakeLists.txt  sdkconfig  sdkconfig.defaults
CANopenMonitor/main/: CANopenMonitor.sll  CANopenMonitor.spj  CANopenMonitor.xdd  CANopenMonitor_events.py  CMakeLists.txt  OD.c  OD.h  Themes.slt  idf_component.yml  main.c
CANopenMonitor/main/canopen/: CO_app.c  CO_app.h
CANopenMonitor/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_themes.c  ui_themes.h
CANopenMonitor/main/ui/components/: ui_comp_hook.c
CANopenMonitor/main/ui/screens/: ui_Configure.c  ui_Splash.c
